--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,17 @@ header {
     background-color: darkgreen;
     position: absolute; bottom: 0;
 }
+ul {
+    text-align: center;
+}
+li {
+    margin-top: 8px;
+    padding-right: 20px;
+    font-size: 20px;
+    color: white;
+    display: inline;
+    line-height: 35px;
+}
 .row {
     height: 500px;
     background-color: white;
