--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
     display: table;
     clear: both;
 }
+body {
+    background-color: red;
+}
 .container {
     width: 80vw;
     margin: 0 auto;
@@ -16,11 +19,13 @@ header {
     height: 200px;
     background-color: yellow;
     margin-bottom: 10px;
+    border: 8px solid white;
     position: relative;
 }
 .barra-top {
-    width: 80vw;
+    width: 79vw;
     height: 40px;
+    border-top: 8px solid white;
     background-color: darkgreen;
     position: absolute; bottom: 0;
 }
@@ -30,7 +35,7 @@ ul {
 li {
     margin-top: 8px;
     padding-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
     color: white;
     display: inline;
     line-height: 35px;
