--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,14 @@ body {
 }
 header {
     height: 200px;
-    background-color: yellow;
     margin-bottom: 10px;
     border: 8px solid white;
     position: relative;
+}
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .barra-top {
     width: 79vw;
