--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,24 @@ body {
     margin: 0 auto;
 }
 header {
-    height: 200px;
+    height: 300px;
     margin-bottom: 10px;
     border: 8px solid white;
     position: relative;
+}
+h1 {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 60px;
+    border: 2px solid white;
+    padding: 0 2px;
+    position: absolute; top: 50%; left: 50%;
+    transform: translate(-50%,-70%);
+}
+h3 {
+    font-family: 'Roboto', sans-serif;
+    position: absolute; top: 70%; left: 33%;
+    color: white;
 }
 img {
     width: 100%;
