--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,17 @@ li {
 aside {
     height: 100%;
     width: 25%;
-    background-color: mediumorchid;
+    background-color: white;
     float: left;
+}
+.left .content{
+    width: 100%;
+    background-color: white
+    padding: 0 10px;
+}
+p {
+    text-align: justify;
+    color: darkgreen;
 }
 main {
     height: 100%;
