--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ p {
 }
 /* parte centrale main */
 main {
-
     width: 50%;
     float: left;
     padding: 0 10px;
@@ -102,8 +101,34 @@ aside.right {
     text-align: justify;
     color: black;
 }
+/* inizio footer */
 footer {
-    height: 100px;
+    height: 130px;
     margin-top: 10px;
-    background-color: powderblue;
+    background-color: rgba(200, 255, 255, 0.8);
+    position: relative;
+    border-bottom: 8px solid lightgreen;
+}
+.barra-bottom {
+    width: 100%;
+    height: 30px;
+    background-color: rgba(130, 255, 255, 0.8);
+    border-bottom: 2px solid lightblue;
+    position: absolute; top: 0;
+}
+.fine {
+    color: rgba(100, 190, 255, 0.8);
+    text-align: center;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+}
+.icons {
+    margin-top: 40px;
+    float: left;
+}
+.fab {
+    padding-top: 20px;
+    padding-left: 220px;
+    font-size: 40px;
+    color: lightblue;
 }
