--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ img {
     object-fit: cover;
 }
 .barra-top {
-    width: 79vw;
+    width: 100%;
     height: 40px;
     border-top: 8px solid white;
     background-color: darkgreen;
