--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ header {
     border: 8px solid white;
     position: relative;
 }
+.fas {
+    font-size: 40px;
+    color: white;
+    position: absolute; left: 48%; top: 18%;
+}
 h1 {
     color: white;
     font-family: 'Roboto', sans-serif;
@@ -95,19 +100,20 @@ main .content {
 }
 /* parte centrale dx */
 aside.right {
-    background-color: white;
+    background-color: inherit;
 }
 .content-widget {
     padding: 8px;
-    border-bottom: 10px solid lightgreen;
+    margin-bottom: 10px;
     text-align: justify;
+    background-color: white;
     color: black;
 }
 /* inizio footer */
 footer {
     height: 130px;
     margin-top: 10px;
-    background-color: rgba(200, 255, 255, 0.8);
+    background-color: white;
     position: relative;
     border-bottom: 8px solid lightgreen;
 }
